// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`render Radio (checked + disabled) 1`] = `
.c0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

<input
  aria-labelledby=":r9:"
  checked=""
  class="c0"
  disabled=""
  id=":r8:"
  name="test-group"
  type="radio"
/>
`;

exports[`render Radio (checked) 1`] = `
.c0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

<input
  aria-labelledby=":r1:"
  checked=""
  class="c0"
  id=":r0:"
  name="test-group"
  type="radio"
/>
`;

exports[`render Radio (unchecked + description object) 1`] = `
.c0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

<input
  aria-labelledby=":r5:"
  class="c0"
  id=":r4:"
  name="test-group"
  type="radio"
/>
`;

exports[`render Radio (unchecked + description text) 1`] = `
.c0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

<input
  aria-labelledby=":r7:"
  class="c0"
  id=":r6:"
  name="test-group"
  type="radio"
/>
`;

exports[`render Radio (unchecked + disabled) 1`] = `
.c0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

<input
  aria-labelledby=":rb:"
  class="c0"
  disabled=""
  id=":ra:"
  name="test-group"
  type="radio"
/>
`;

exports[`render Radio (unchecked) 1`] = `
.c0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

<input
  aria-labelledby=":r3:"
  class="c0"
  id=":r2:"
  name="test-group"
  type="radio"
/>
`;
